# cmake_example

./: CMakeLists.txt
